libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/type-expr-call-arbitrary.jsonc
//@ run: fail
//@ description: calling an arbitrary function should result in a compile error
[
  "::kernel::special_form::is",
  { "#literal": true },
  ["::core::math::headpat", "Int", "Float"]
  //~^ ERROR This function cannot be used as a type constructor
]
